--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>3 Ingredient Peanut Butter Cookie</h1>
-    <img src="../images/cookie.jpg" alt="3 Ingredient Peanut Butter Cookie" height="300" width="300">
+    <img src="../images/carrots.jpg" alt="3 Ingredient Peanut Butter Cookie" height="300" width="300">
     <h2>Description</h2>
         <p>These simple three ingredient cookies are so quick and easy to make!
          Just 10 minutes prep and 10 minutes in the oven, you have a wonderful
