--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cookie.html">3 Ingredient Peanut Butter Cookies</a>
+    <ol><li><a href="recipes/cookie.html">3 Ingredient Peanut Butter Cookies</a></li>
+        <li><a href="recipes/carrots.html">Glazed Carrots</a></li>
+        <li><a href="recipes/cloudbread.html">Cloud Bread</a></li>
 </body>
 </html>
