--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>3 Ingredient Cookies</title>
 </head>
 <body>
     <h1>3 Ingredient Peanut Butter Cookie</h1>
-    <img src="../images/carrots.jpg" alt="3 Ingredient Peanut Butter Cookie" height="300" width="300">
+    <img src="../images/cookies.jpg" alt="3 Ingredient Peanut Butter Cookie" height="300" width="300">
     <h2>Description</h2>
         <p>These simple three ingredient cookies are so quick and easy to make!
          Just 10 minutes prep and 10 minutes in the oven, you have a wonderful
